Fix in request saving by user type

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -62,6 +62,18 @@
             </ul>
           </div>
         </li>
+        <li class="mb-1" *ngIf="userRole === 2">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            data-bs-toggle="collapse" data-bs-target="#saving-collapse" aria-expanded="false">
+            Ahorros
+          </button>
+          <div class="collapse" id="saving-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/user/request/saving"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+            </ul>
+          </div>
+        </li>
       </ul>
       <div class="mt-auto">
         <button class="btn btn-danger w-100 mt-3" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar
@@ -122,6 +134,18 @@
       <div class="collapse" id="credit-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
           <li><a routerLink="/auth/user/request/credit"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="mb-1" *ngIf="userRole === 2">
+      <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+        data-bs-toggle="collapse" data-bs-target="#saving-collapse" aria-expanded="false">
+        Ahorros
+      </button>
+      <div class="collapse" id="saving-collapse">
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/user/request/saving"
               class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
         </ul>
       </div>
