Add saving requests in admin

--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -4,9 +4,20 @@
             Solicitudes de credito
         </div>
         <div class="card-body">
-            <h5 class="card-title text-center">Ver todas las solicitudes</h5>
+            <h5 class="card-title text-center">Ver todas las solicitudes de credito</h5>
             <div class="credit-button">
                 <a routerLink="/auth/admin/credits" class="btn btn-primary">Ver creditos</a>
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header text-center">
+            Solicitudes de Ahorro
+        </div>
+        <div class="card-body">
+            <h5 class="card-title text-center">Ver todas las solicitudes de ahorro</h5>
+            <div class="credit-button">
+                <a routerLink="/auth/admin/savings" class="btn btn-primary">Ver Ahorros</a>
             </div>
         </div>
     </div>
