--- a/front/src/app/components/private/admin/components/generate-saving-request/generate-saving-request.component.html
+++ b/front/src/app/components/private/admin/components/generate-saving-request/generate-saving-request.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary btn-sm" (click)="logData()">Generar Excel</button>
+<button class="btn btn-primary btn-sm" (click)="generateExcel()">Generar Excel</button>
