Add routes to welcome and siderbar user components

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
           <div class="collapse" id="user-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
               <li><a routerLink="/auth/user/information"
-                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Información</a></li>
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Actualizar datos personales</a></li>
             </ul>
           </div>
         </li>
@@ -57,8 +57,12 @@
           </button>
           <div class="collapse" id="credit-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a routerLink="/auth/user/request/credit"
-                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+              <li>
+                <a routerLink="/auth/user/request/credit" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a>
+              </li>
+              <li>
+                <a routerLink="/auth/user/credits/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos</a>
+              </li>
             </ul>
           </div>
         </li>
@@ -69,8 +73,12 @@
           </button>
           <div class="collapse" id="saving-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a routerLink="/auth/user/request/saving"
-                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+              <li>
+                <a routerLink="/auth/user/request/saving" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar ahorro</a>
+              </li>
+              <li>
+                <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
+              </li>
             </ul>
           </div>
         </li>
@@ -122,7 +130,7 @@
       <div class="collapse" id="user-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
           <li><a routerLink="/auth/user/information"
-              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Información</a></li>
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Actualizar datos personales</a></li>
         </ul>
       </div>
     </li>
@@ -133,8 +141,12 @@
       </button>
       <div class="collapse" id="credit-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a routerLink="/auth/user/request/credit"
-              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+          <li>
+            <a routerLink="/auth/user/request/credit" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a>
+          </li>
+          <li>
+            <a routerLink="/auth/user/credits/balance" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Validar saldos</a>
+          </li>
         </ul>
       </div>
     </li>
@@ -145,8 +157,12 @@
       </button>
       <div class="collapse" id="saving-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a routerLink="/auth/user/request/saving"
-              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar</a></li>
+          <li>
+            <a routerLink="/auth/user/request/saving" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar ahorro</a>
+          </li>
+          <li>
+            <a routerLink="/auth/user/request/saving-withdrawal" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Solicitar retiro de ahorro</a>
+          </li>
         </ul>
       </div>
     </li>
