--- a/front/src/app/components/private/welcome/welcome.component.html
+++ b/front/src/app/components/private/welcome/welcome.component.html
@@ -9,9 +9,9 @@
         <!-- Card de Mi Perfil -->
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
             <div class="card shadow text-center h-100">
-                <div class="card-header">
+                <h4 class="card-header">
                     Mi Perfil
-                </div>
+                </h4>
                 <div class="card-body">
                     <h5 class="card-title">Datos Personales</h5>
                     <a routerLink="/auth/user/information" class="btn btn-primary">Actualiza tus datos aquí</a>
@@ -22,9 +22,9 @@
         <!-- Card de Servicios de Crédito -->
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
             <div class="card shadow text-center h-100">
-                <div class="card-header">
+                <h4 class="card-header">
                     Servicios de Crédito
-                </div>
+                </h4>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los Servicios de Crédito</h5>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/credit">Solicitalo aquí</a>
@@ -37,9 +37,9 @@
         <!-- Card de Servicios de Ahorro -->
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
             <div class="card shadow text-center h-100">
-                <div class="card-header">
+                <h4 class="card-header">
                     Servicios de Ahorro
-                </div>
+                </h4>
                 <div class="card-body ">
                     <h5 class="card-title">Conoce los Servicios de Ahorro</h5>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/user/request/saving">Solicita tu ahorro aquí</a>
