--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.css
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.css
@@ -3,15 +3,7 @@
     margin: 1rem;
 }
 
-.credit-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-}
-
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+h1 {
+    color: #00823d;
+    font-weight: bold;
 }
