--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.css
@@ -1,13 +1,17 @@
 .table {
-    border-collapse: collapse;
-  }
-  
-  .table th,
-  .table td {
-    border: 1px solid #dee2e6;
-  }
-  
-  .page-link {
-    cursor: pointer;
-  }
-  
+  border-collapse: collapse;
+}
+
+.table th,
+.table td {
+  border: 1px solid #dee2e6;
+}
+
+.page-link {
+  cursor: pointer;
+}
+
+h1 {
+  color: #00823d;
+  font-weight: bold;
+}
