Add user management component

--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -1,4 +1,6 @@
 <div class="container mt-5 mb-3">
+  <h1>Actualización de Información</h1>
+
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
@@ -15,7 +17,7 @@
       </h2>
       <div
         id="collapseOne"
-        class="accordion-collapse collapse"
+        class="accordion-collapse collapse show"
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
@@ -130,7 +132,7 @@
       </h2>
       <div
         id="collapseSix"
-        class="accordion-collapse collapse show"
+        class="accordion-collapse collapse"
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
