--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -1,80 +1,167 @@
-<div class="container">
-  <div class="row mb-3">
-    <div class="col">
-      <h2 class="text-center">Usuarios</h2>
-      <!-- <input type="text" placeholder="Buscar" [(ngModel)]="searchQuery" (ngModelChange)="onSearch()" class="form-control"> -->
+<div class="card">
+  <p-table
+      #dt2
+      [value]="users"
+      styleClass="p-datatable-striped" 
+      [paginator]="true"
+      [rows]="rows"
+      [totalRecords]="totalRecords"
+      [loading]="loading"
+      [lazy]="true"
+      (onLazyLoad)="loadUsers(($event.first ?? 0) / ($event.rows ?? 10) + 1, $event.rows ?? 10)"
+      [rowsPerPageOptions]="[10, 25, 50]" 
+      [globalFilterFields]="['numeroDocumento', 'primerApellido', 'segundoNombre', 'primerNombre']"
+      [tableStyle]="{ 'min-width': '75rem' }"
+  >
+  <ng-template pTemplate="caption">
+      <div class="flex">
+        <button class="btn btn-success m-2" (click)="createUser()" data-bs-toggle="modal" data-bs-target="#userModal">
+          Crear Usuario
+        </button>
+          <p-iconField iconPosition="left" class="ml-auto">
+              <p-inputIcon>
+                  <i class="pi pi-search"></i>
+              </p-inputIcon>
+              <input 
+                  pInputText 
+                  type="text" 
+                  (input)="onFilterGlobal($event)" 
+                  placeholder="Search keyword" />
+          </p-iconField>
+      </div>
+  </ng-template>
+  <ng-template pTemplate="header">
+      <tr>
+          <th style="width:10%">No. Documento</th>
+          <th style="width:15%">Primer Apellido</th>
+          <th style="width:15%">Segundo Apellido</th>
+          <th style="width:15%">Primer Nombre</th>
+          <th style="width:15%">Segundo Nombre</th>
+          <th style="width:20%">Acciones</th>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-user>
+      <tr>
+          <td>
+              {{ user.numeroDocumento }}
+          </td>
+          <td>
+            {{ user.primerApellido }}
+          </td>
+          <td>
+            {{ user.segundoApellido }}
+          </td>
+          <td>
+            {{ user.primerNombre }}
+          </td>
+          <td>
+            {{ user.segundoNombre }}
+          </td>
+          <td>
+            <button
+              class="btn btn-warning btn-sm me-2"
+              (click)="changeState(user.id)"
+            >
+              {{ user.activo ? "Deshabilitar" : "Habilitar" }}
+            </button>
+            <button
+              class="btn btn-primary btn-sm"
+              (click)="editUser(user.id)"
+              data-bs-toggle="modal"
+              data-bs-target="#userModal"
+            >
+              Editar
+            </button>
+          </td>
+      </tr>
+  </ng-template>
+  <ng-template pTemplate="emptymessage">
+      <tr>
+          <td colspan="5">No customers found.</td>
+      </tr>
+  </ng-template>
+  </p-table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="userModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Información del Usuario</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="formReset()"></button>
+      </div>
+      <form [formGroup]="editUserForm" (ngSubmit)="submit()">
+        <div class="modal-body">
+          <div class="row g-3">
+            <input type="hidden" formControlName="id" />
+            <div class="col-md-7">
+              <label for="idTipoDocumento" class="form-label">Tipo de Documento</label>
+              <select id="idTipoDocumento" class="form-select" formControlName="idTipoDocumento">
+                <option value="" selected disabled>Seleccione un tipo de documento...</option>
+                <option *ngFor="let documentType of documentTypes" [value]="documentType.id">
+                  {{ documentType.nombre }}
+                </option>
+              </select>
+            </div>
+            <div class="col-md-5">
+              <label for="numeroDocumento" class="form-label">Número de Documento</label>
+              <input type="text" id="numeroDocumento" class="form-control" formControlName="numeroDocumento" />
+            </div>
+            <div class="col-md-6">
+              <label for="primerApellido" class="form-label">Primer Apellido</label>
+              <input type="text" id="primerApellido" class="form-control" formControlName="primerApellido" />
+            </div>
+            <div class="col-md-6">
+              <label for="segundoApellido" class="form-label">Segundo Apellido</label>
+              <input type="text" id="segundoApellido" class="form-control" formControlName="segundoApellido" />
+            </div>
+            <div class="col-md-6">
+              <label for="primerNombre" class="form-label">Primer Nombre</label>
+              <input type="text" id="primerNombre" class="form-control" formControlName="primerNombre" />
+            </div>
+            <div class="col-md-6">
+              <label for="segundoNombre" class="form-label">Segundo Nombre</label>
+              <input type="text" id="segundoNombre" class="form-control" formControlName="segundoNombre" />
+            </div>
+            <div class="col-md-8">
+              <label for="usuario" class="form-label">Usuario</label>
+              <input type="text" id="usuario" class="form-control" formControlName="usuario" />
+            </div>
+            <div class="col-md-4">
+              <label for="id_rol" class="form-label">Rol</label>
+              <select id="id_rol" class="form-select" formControlName="id_rol">
+                <option value="" selected>Seleccione un rol...</option>
+                <option *ngFor="let role of roles" [value]="role.id">
+                  {{ role.nombre }}
+                </option>
+              </select>
+            </div>
+            <div class="col-md-8">
+              <label for="id_tipo_asociado" class="form-label">Tipo de Asociado</label>
+              <select id="id_tipo_asociado" class="form-select" formControlName="id_tipo_asociado">
+                <option value="" selected>Seleccione un tipo de asociado...</option>
+                <option *ngFor="let associateType of associatesTypes" [value]="associateType.id">
+                  {{ associateType.nombre }}
+                </option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label for="activo" class="form-label">Activo</label>
+              <select id="activo" class="form-select" formControlName="activo">
+                <option [value]="true">Sí</option>
+                <option [value]="false">No</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="formReset()">Cerrar</button>
+          <button type="submit" class="btn btn-primary" [disabled]="editUserForm.invalid"
+          data-bs-dismiss="modal">{{ isEditMode ? 'Guardar Cambios' : 'Crear Usuario' }}</button>
+        </div>
+      </form>
     </div>
   </div>
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>No. Documento</th>
-        <th>Primer Apellido</th>
-        <th>Segundo Apellido</th>
-        <th>Primer Nombre</th>
-        <th>Segundo Nombre</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.numeroDocumento }}</td>
-        <td>{{ user.primerApellido }}</td>
-        <td>{{ user.segundoApellido }}</td>
-        <td>{{ user.primerNombre }}</td>
-        <td>{{ user.segundoNombre }}</td>
-        <td>
-            <button
-                class="btn btn-warning btn-sm me-2"
-                (click)="changeState(user.id)"
-            >
-                {{ user.activo ? 'Deshabilitar' : 'Habilitar' }}
-            </button>
-            <button
-                class="btn btn-primary btn-sm"
-                (click)="editUser(user.id)"
-            >
-                Editar
-            </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-  <nav aria-label="Page navigation example" *ngIf="totalRecords > rows">
-    <ul class="pagination justify-content-center">
-      <li class="page-item" [class.disabled]="currentPage === 1">
-        <a
-          class="page-link"
-          (click)="onPageChange(currentPage - 1)"
-          aria-label="Previous"
-          style="cursor: pointer"
-        >
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li
-        class="page-item"
-        *ngFor="let page of pages"
-        [class.active]="currentPage === page"
-      >
-        <a
-          class="page-link"
-          (click)="onPageChange(page)"
-          style="cursor: pointer"
-          >{{ page }}</a
-        >
-      </li>
-      <li class="page-item" [class.disabled]="currentPage === totalPages">
-        <a
-          class="page-link"
-          (click)="onPageChange(currentPage + 1)"
-          aria-label="Next"
-          style="cursor: pointer"
-        >
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
 </div>
+<!-- End Modal -->
